--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,7 +41,7 @@
     "/usr/include",
     "/usr/local/include",
     "/usr/include/x86_64-linux-gnu",
-    "/usr/lib/gcc/x86_64-linux-gnu/13/include",
+    "/usr/lib/gcc/x86_64-linux-gnu/13/include"
   ],
   "C_Cpp_Runner.includeSearch": [
     "*",
