fixed scope bugs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,7 +67,8 @@
     "ctype.h": "c",
     "typeinfo": "c",
     "compare": "c",
-    "type_traits": "c"
+    "type_traits": "c",
+    "eightqueen_c": "c"
   },
   "C_Cpp.default.compilerPath": "/usr/bin/gcc"
 }
