dentaku整理, "eq & rel gen"のコンパイル完成

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -73,7 +73,10 @@
     "limits": "c",
     "new": "c",
     "dentaku": "c",
-    "dentaku_sup": "c"
+    "dentaku_sup": "c",
+    "concepts": "c",
+    "cmath": "c",
+    "dentaku_if_done_temp": "c"
   },
   "C_Cpp.default.compilerPath": "/usr/bin/gcc"
 }
